--- a/app/src/main/res/layout/fragment_sign_up_search_college.xml
+++ b/app/src/main/res/layout/fragment_sign_up_search_college.xml
@@ -51,8 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/elevation"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
+        android:layout_centerInParent="true"
         android:visibility="gone"/>
 
 </RelativeLayout>
