--- a/app/src/main/res/layout/fragment_search_user_list_item.xml
+++ b/app/src/main/res/layout/fragment_search_user_list_item.xml
@@ -43,7 +43,7 @@
             android:lines="1"
             android:textColor="@color/fifty_black"
             android:textSize="12sp"
-            tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"/>
+            tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs" android:text="e"/>
 
     </LinearLayout>
 
