--- a/app/src/main/res/layout/activity_deactivate_account.xml
+++ b/app/src/main/res/layout/activity_deactivate_account.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.linute.linute.MainContent.Settings.DeactivateAccountActivity">
+
+    <include layout="@layout/tool_bar"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -16,6 +14,23 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:text="@string/deactivata_account_text"
+        android:layout_margin="16dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tell us why you're leaving:"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_margin="16dp"
+        />
+
+    <EditText
+        android:id="@+id/input_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_weight="1"
         />
 
     <Button
@@ -25,4 +40,4 @@
         android:layout_gravity="bottom"
         android:text="Deactivate"/>
 
-</FrameLayout>
+</LinearLayout>
