--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -42,13 +42,25 @@
 
     <TextView
         android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="Error loading page. Tap to retry"
-        android:textColor="@color/pure_white"
         android:textSize="@dimen/header_font_size"
+        android:visibility="gone"
+    />
+
+    <TextView
+        android:id="@+id/no_friends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="64dp"
+        android:drawablePadding="4dp"
+        android:drawableTop="@drawable/ic_beer_google"
+        android:gravity="center"
+        android:text="@string/empty_text_trend_friend"
         android:visibility="gone"
     />
 
