--- a/app/src/main/res/layout/list_item_crop_mode.xml
+++ b/app/src/main/res/layout/list_item_crop_mode.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="0dp"
     android:layout_height="match_parent"
@@ -14,18 +14,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_centerInParent="true"
+
         >
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/image_crop_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            app:riv_corner_radius="@dimen/radius_crop_mode"
             android:padding="@dimen/crop_icon_border_thickness"
-
             />
+
+
 
         <!--<View
             android:id="@+id/layout_image_border"
@@ -34,5 +36,16 @@
              />-->
 
     </FrameLayout>
+    <TextView
+        android:id="@+id/text_crop_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:textColor="@color/white"
+        android:layout_marginTop="20sp"
+        android:textSize="14sp"
+        android:layout_below="@id/layout_image_wrapper"
+        android:layout_centerHorizontal="true"
+        />
 
-</FrameLayout>
+</RelativeLayout>
