--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -21,6 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="@dimen/margin_empty_screen"
+        android:gravity="center_horizontal"
         android:layout_marginRight="@dimen/margin_empty_screen"
         android:drawableTop="@drawable/ic_mail"
         android:text="@string/empty_fragment_rooms"
