--- a/app/src/main/res/layout/fragment_create_chat_selected_users.xml
+++ b/app/src/main/res/layout/fragment_create_chat_selected_users.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="48dp"
     android:layout_height="48dp"
-    android:padding="4dp"
     >
 
     <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/image_user"
-        android:padding="6dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="@dimen/profile_image_radius"
+        android:layout_height="@dimen/profile_image_radius"
+        android:layout_gravity="center_vertical|left"
+        />
 
 </FrameLayout>
