thinner border for crop options

--- a/app/src/main/res/layout/list_item_crop_mode.xml
+++ b/app/src/main/res/layout/list_item_crop_mode.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="2dp"
+            android:padding="@dimen/crop_icon_border_thickness"
 
             >
 
