capitalize sentences in feedback

--- a/app/src/main/res/layout/activity_deactivate_account.xml
+++ b/app/src/main/res/layout/activity_deactivate_account.xml
@@ -16,6 +16,7 @@
         android:background="@null"
         android:gravity="top"
         android:hint="Tell us a little about why you are leaving..."
+        android:inputType="textCapSentences"
     />
 
     <View
