work on fullscreening and zooming photos

--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -31,7 +31,7 @@
         android:src="@drawable/ic_cinema"
         android:visibility="gone"/>
 
-    <ImageView
+    <com.linute.linute.MainContent.EditScreen.MoveZoomImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
