--- a/app/src/main/res/layout/ratingbar_layout.xml
+++ b/app/src/main/res/layout/ratingbar_layout.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="32dp"
+             android:layout_margin="4dp"
              android:orientation="vertical">
 
     <ProgressBar
@@ -11,7 +12,7 @@
         android:layout_height="match_parent"
         android:indeterminate="false"
         android:max="100"
-        android:progress="30"
+        android:progress="20"
         android:progressDrawable="@drawable/rating_progressbar"
     />
 
