--- a/app/src/main/res/layout/fragment_crop.xml
+++ b/app/src/main/res/layout/fragment_crop.xml
@@ -11,7 +11,7 @@
         android:id="@+id/crop_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cropviewViewportHeightRatio="1"
+        app:cropviewViewportRatio="1"
     />
 
     <android.support.v7.widget.Toolbar
