made fullscreen fragment zoomable

--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -31,10 +31,10 @@
         android:src="@drawable/ic_cinema"
         android:visibility="gone"/>
 
-    <com.linute.linute.MainContent.EditScreen.MoveZoomImageView
+    <com.linute.linute.MainContent.FeedDetailFragment.ZoomImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:background="@color/fifty_black"
