--- a/app/src/main/res/xml/pref_profile_frag_main.xml
+++ b/app/src/main/res/xml/pref_profile_frag_main.xml
@@ -20,6 +20,9 @@
 
     <PreferenceCategory android:title="SUPPORT">
         <Preference
+            android:key="talk_to_us"
+            android:title="Talk to Us" />
+        <Preference
             android:key="give_feedback"
             android:title="Give Feedback" />
         <Preference
