--- a/app/src/main/res/layout/fragment_sign_up_pin_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_pin_code.xml
@@ -70,6 +70,14 @@
             android:textColor="@color/secondaryColor"
         />
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+
     </FrameLayout>
 
 </LinearLayout>
