--- a/app/src/main/res/layout/material_search_toolbar.xml
+++ b/app/src/main/res/layout/material_search_toolbar.xml
@@ -2,6 +2,8 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:navigationIcon="@drawable/ic_action_navigation_arrow_back"
     android:layout_height="?actionBarSize">
 
     <LinearLayout
