--- a/app/src/main/res/layout/fragment_discover_holder.xml
+++ b/app/src/main/res/layout/fragment_discover_holder.xml
@@ -40,52 +40,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <FrameLayout
-        android:id="@+id/fab_close_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-    />
-
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/create_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:fab_addButtonColorNormal="@color/secondaryColor"
-        app:fab_addButtonPlusIconColor="@color/pure_white">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/create_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white_pressed"
-            app:fab_icon="@drawable/status_icon"
-            app:fab_size="mini" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/create_upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white_pressed"
-            app:fab_icon="@drawable/ic_image_black_24dp"
-            app:fab_size="mini"
-        />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/create_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white_pressed"
-            app:fab_icon="@drawable/ic_photo_camera_black_24dp"
-            app:fab_size="mini"
-        />
-
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
+    <include layout="@layout/layout_create_menu1" />
+    
 </android.support.design.widget.CoordinatorLayout>
 
