--- a/app/src/main/res/drawable/rating_progressbar.xml
+++ b/app/src/main/res/drawable/rating_progressbar.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
-        <shape>
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="@android:color/transparent"/>
+            <stroke
+                android:width="2dp"
+                android:color="@color/secondaryColor"/>
             <corners android:radius="4dp"/>
-            <solid android:color="@color/seperator_color"/>
         </shape>
     </item>
     <item android:id="@android:id/progress">
